# Streamlit

./: main.py  pyproject.toml  requeriments.txt
data/: CultivosPresupuestados.xlsx  InformeOtRealizadas_al_2025-07-18.xlsx  InformeOtRealizadas_al_2025-07-19.xlsx  Produccion Por Cultivo.xlsx  ordenes de carga.xlsx  parametros_por_especie.json  reporte_avance_cosecha (3).xls  reporte_ordenes_carga (9).xls
data/reporte_avance_cosecha (3)_archivos/: filelist.xml  sheet001.htm  stylesheet.css  tabstrip.htm
pages/: 1_🏠_inicio.py  3_produccion_cultivo.py  4_reporte_cosecha.py  5_analisis_economico.py  5_💰_analisis_economico.py  costos.py  inicio.py  model.py  page1.py  page2.py
